# m3-week-08-1stby

./: README.md
exchange/: index.html
exchange/css/: styles.css
exchange/js/: script.js
flask101/: .gitignore  config.py  pyproject.toml  requirements.txt
flask101/app/: __init__.py  email.py  errors.py  forms.py  models.py  routes.py  translate.py
flask101/app/auth/: email.py  forms.py  routes.py
flask101/app/errors/: __init__.py
flask101/app/main/: forms.py  routes.py
flask101/app/static/: login.css  register.css
flask101/app/templates/: _post.html  base.html  edit_profile.html  index.html  login.html  user.html
flask101/app/templates/auth/: login.html  register.html  reset_password.html  reset_password_request.html
flask101/app/templates/email/: reset_password.html  reset_password.txt
flask101/app/templates/errors/: 404.html  500.html
flask101/migrations/versions/: 1c4ca3fb7df9_add_language_to_posts.py  d56019defd30_user_table.py
youtube/: index.html
youtube/css/: style.css
youtube/js/: script.js
